--- a/frontend/src/modules/object-panel/components/ObjectPanel/ObjectPanel.css
+++ b/frontend/src/modules/object-panel/components/ObjectPanel/ObjectPanel.css
@@ -6,7 +6,9 @@
 
 /* When docked right, position the panel below the gridtable filter bar */
 .object-panel-dockable.dockable-panel--right {
-  --dockable-panel-top-offset: calc(var(--app-content-top) + var(--gridtable-filter-bar-height, 0px));
+  --dockable-panel-top-offset: calc(
+    var(--app-content-top) + var(--gridtable-filter-bar-height, 0px)
+  );
 }
 
 .object-panel {
