--- a/frontend/src/modules/object-panel/components/ObjectPanel/ObjectPanel.css
+++ b/frontend/src/modules/object-panel/components/ObjectPanel/ObjectPanel.css
@@ -25,8 +25,8 @@
   display: flex;
   align-items: center;
   padding: 10px 0px;
-  /* border-bottom: 1px solid var(--color-border); */
-  background-color: var(--color-bg-secondary);
+  border-bottom: 1px solid var(--color-border);
+  flex-shrink: 0;
   position: relative;
 }
 
